syntax = "proto3";

option csharp_namespace = "Ssz.DataAccessGrpc.ServerBase";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service DataAccess {
  rpc Initiate (InitiateRequest) returns (InitiateReply);

  rpc SubscribeForCallback(SubscribeForCallbackRequest) returns (stream CallbackMessage);

  rpc Conclude (ConcludeRequest) returns (ConcludeReply);

  rpc ClientKeepAlive (ClientKeepAliveRequest) returns (ClientKeepAliveReply);

  rpc DefineList (DefineListRequest) returns (DefineListReply);

  rpc DeleteLists (DeleteListsRequest) returns (DeleteListsReply);

  rpc AddItemsToList (AddItemsToListRequest) returns (AddItemsToListReply);

  rpc RemoveItemsFromList (RemoveItemsFromListRequest) returns (RemoveItemsFromListReply);

  rpc EnableListCallback (EnableListCallbackRequest) returns (EnableListCallbackReply);

  rpc TouchList (TouchListRequest) returns (TouchListReply);

  rpc PollElementValuesChanges (PollElementValuesChangesRequest) returns (PollElementValuesChangesReply);

  rpc PollEventsChanges (PollEventsChangesRequest) returns (PollEventsChangesReply);

  rpc ReadElementValuesJournals (ReadElementValuesJournalsRequest) returns (ReadElementValuesJournalsReply);

  rpc ReadEventMessagesJournal (ReadEventMessagesJournalRequest) returns (ReadEventMessagesJournalReply);

  rpc WriteElementValues (WriteElementValuesRequest) returns (WriteElementValuesReply);

  rpc AckAlarms (AckAlarmsRequest) returns (AckAlarmsReply);

  rpc Passthrough (PassthroughRequest) returns (PassthroughReply);

  rpc LongrunningPassthrough (LongrunningPassthroughRequest) returns (LongrunningPassthroughReply);

  rpc LongrunningPassthroughCancel (LongrunningPassthroughCancelRequest) returns (LongrunningPassthroughCancelReply);
}

message NullableString {
  oneof kind {
    google.protobuf.NullValue null = 1;
    string data = 2;
  }
}

message ContextStatus {  
  uint32 state_code = 1; 
  string info = 2;
  string label = 3;
  string details = 4;
}

message ElementValuesCallback {    
  uint32 list_client_alias = 1;
  ElementValuesCollection element_values_collection = 2;
}

message EventMessagesCallback {
  uint32 list_client_alias = 1;  
  EventMessagesCollection event_messages_collection = 2;  
}

message SubscribeForCallbackRequest {
  string context_id = 1;
}

message LongrunningPassthroughCallback {  
  string job_id = 1;
  uint32 progress_percent = 2;
  string progress_label = 3;
  string progress_details = 4;
  uint32 job_status_code = 5;
}

message CallbackMessage {
  oneof optional_message {    
    ContextStatus context_status = 1;
    ElementValuesCallback element_values_callback = 2;
    EventMessagesCallback event_messages_callback = 3;
    LongrunningPassthroughCallback longrunning_passthrough_callback = 4;
  }
}

message InitiateRequest {
  string client_application_name = 1;
  string client_workstation_name = 2;     
  uint32 requested_server_context_timeout_ms = 3;
  string requested_culture_name = 4;
  string system_name_to_connect = 5; 
  map<string, NullableString> context_params = 6;
}

message InitiateReply {
  string context_id = 1;
  uint32 server_context_timeout_ms = 2;
  string server_culture_name = 3;
}

message ConcludeRequest {
  string context_id = 1;
}

message ConcludeReply {  
}

message ClientKeepAliveRequest {
  string context_id = 1;
}

message ClientKeepAliveReply {  
}

message AliasResult {
  uint32 status_code = 1;
  string info = 2;
  string label = 3;
  string details = 4;
  uint32 client_alias = 5; 
  uint32 server_alias = 6; 
}

message DefineListRequest {
  string context_id = 1;
  uint32 list_client_alias = 2; 
  uint32 list_type = 3; 
  map<string, NullableString> list_params = 4;
}

message DefineListReply {  
  AliasResult result = 1;   
}

message DeleteListsRequest {
  string context_id = 1;
  repeated uint32 list_server_aliases = 2; 
}

message DeleteListsReply {  
  repeated AliasResult results = 1;
}

message ListItemInfo {
  string element_id = 1;
  uint32 client_alias = 2; 
}

message AddItemsToListRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  repeated ListItemInfo items_to_add = 3;
}

message AddItemToListResult {  
  AliasResult alias_result = 1;
  TypeId data_type_id = 2; 
  bool is_readable = 3;
  bool is_writable = 4;
}

message AddItemsToListReply {  
  repeated AddItemToListResult results = 1;
}

message RemoveItemsFromListRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  repeated uint32 server_aliases_to_remove = 3; 
}

message RemoveItemsFromListReply {  
  repeated AliasResult results = 1;
}

message EnableListCallbackRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  bool enable = 3;
}

message EnableListCallbackReply {  
  bool enabled = 1;
}

message TouchListRequest {
  string context_id = 1;
  uint32 list_server_alias = 2;
}

message TouchListReply {  
}

message ElementValuesCollection {
  string guid = 1;
  string next_collection_guid = 2;

  repeated fixed32 double_aliases = 3;
  repeated double double_values = 4;
  repeated uint32 double_value_type_codes = 5;
  repeated uint32 double_value_status_codes = 6;
  repeated google.protobuf.Timestamp double_timestamps = 7;  

  repeated fixed32 uint_aliases = 8;
  repeated uint32 uint_values = 9;
  repeated uint32 uint_value_type_codes = 10;
  repeated uint32 uint_value_status_codes = 11;
  repeated google.protobuf.Timestamp uint_timestamps = 12;  

  repeated fixed32 object_aliases = 13;
  bytes object_values = 14;  
  repeated uint32 object_value_status_codes = 15;
  repeated google.protobuf.Timestamp object_timestamps = 16;    
}

message EventMessagesCollection {
  string guid = 1;
  string next_collection_guid = 2;

  repeated EventMessage event_messages = 3;

  map<string, NullableString> common_fields = 4;
}

message EventMessage {  
  google.protobuf.Timestamp occurrence_time = 1;  
  uint32 event_type = 2;
  EventId event_id = 3;
  string text_message = 4;
  uint32 category_id = 5;
  uint32 priority = 6;
  string operator_name = 7;
  AlarmMessageData alarm_message_data = 8; 
  map<string, NullableString> fields = 9;
}

message EventId {  
  string source_element_id = 1;
  TypeId multiplexed_alarm_container = 2;
  repeated TypeId conditions = 3;
  string occurrence_id = 4;
  oneof optional_time_last_active {
    google.protobuf.Timestamp time_last_active = 5;
  }
}

message TypeId {  
  string schema_type = 1;
  string namespace = 2;
  string local_id = 3;  
}

message AlarmMessageData {  
  uint32 alarm_state = 1;
  uint32 alarm_state_change = 2;
  oneof optional_time_last_active {
    google.protobuf.Timestamp time_last_active = 3;
  }
}

message PollElementValuesChangesRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
}

message PollElementValuesChangesReply {  
  ElementValuesCollection element_values_collection = 1;
}

message PollEventsChangesRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
}

message PollEventsChangesReply {  
  EventMessagesCollection event_messages_collection = 1;  
}

message ReadElementValuesJournalsRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  google.protobuf.Timestamp first_timestamp = 3;
  google.protobuf.Timestamp second_timestamp = 4;  
  uint32 num_values_per_alias = 5;
  TypeId calculation = 6;
  map<string, NullableString> params = 7;
  repeated uint32 server_aliases = 8; 
}

message ReadElementValuesJournalsReply {  
  ElementValuesJournalsCollection element_values_journals_collection = 1;  
}

message ElementValuesJournalsCollection {  
  string guid = 1;
  string next_collection_guid = 2;

  repeated ElementValuesJournal element_values_journals = 3;  
}

message ElementValuesJournal {
  repeated double double_values = 1;
  repeated uint32 double_value_status_codes = 2;
  repeated google.protobuf.Timestamp double_timestamps = 3;  
  
  repeated uint32 uint_values = 4;
  repeated uint32 uint_value_status_codes = 5;
  repeated google.protobuf.Timestamp uint_timestamps = 6;  

  bytes object_values = 7;
  repeated uint32 object_value_status_codes = 8;
  repeated google.protobuf.Timestamp object_timestamps = 9;  
}

message ReadEventMessagesJournalRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  google.protobuf.Timestamp first_timestamp = 3;
  google.protobuf.Timestamp second_timestamp = 4;    
  map<string, NullableString> params = 5;  
}

message ReadEventMessagesJournalReply {  
  EventMessagesCollection event_messages_collection = 1;
}

message WriteElementValuesRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  ElementValuesCollection element_values_collection = 3; 
}

message WriteElementValuesReply {  
  repeated AliasResult results = 1;
}

message AckAlarmsRequest {
  string context_id = 1;
  uint32 list_server_alias = 2; 
  string operator_name = 3;
  string comment = 4;
  repeated EventId event_ids_to_ack = 5;
}

message AckAlarmsReply {  
  repeated EventIdResult results = 1;
}

message EventIdResult {
  uint32 status_code = 1;
  EventId event_id = 2;
}

message PassthroughData {  
  string guid = 1;
  string next_guid = 2;  
  bytes data = 3;
}

message PassthroughRequest {
  string context_id = 1;
  string recipient_id = 2;
  string passthrough_name = 3;
  PassthroughData data_to_send = 4;
}

message PassthroughReply {  
  PassthroughData return_data = 1;
}

message LongrunningPassthroughRequest {  
  string context_id = 1;  
  string recipient_id = 2;
  string passthrough_name = 3;
  PassthroughData data_to_send = 4;
}

message LongrunningPassthroughReply {    
  string job_id = 1;
}

message LongrunningPassthroughCancelRequest {
  string context_id = 1;
  string job_id = 2;  
}

message LongrunningPassthroughCancelReply {    
}